--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://dmstepanuik.github.io/goit-react-hw-03-image-finder/",
   "dependencies": {
+    "@chakra-ui/spinner": "^2.0.11",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
